<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginCadastro.CadastroActivity"
    android:background="@drawable/fundo_inicial">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fundo_inicial"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/logo_name"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            app:srcCompat="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinputNome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/Nome_Paciente_Cad"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etxtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Nome"
                android:inputType="text|textCapWords"
                android:maxLength="15"
                android:textColor="@android:color/primary_text_light" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinputSobrenome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/Sobrenome_Paciente_Cad"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etxtSobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Sobrenome"
                android:inputType="text|textCapWords"
                android:maxLength="40"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinputCPF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/CPF_Paciente_Cad"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etxtCPF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CPF"
                android:inputType="numberSigned"
                android:maxLength="11"
                android:textColor="@android:color/primary_text_light" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinputEstado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/Estado_Paciente_Cad"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etxtEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Estado"
                android:inputType="text|textCapCharacters"
                android:maxLength="2"
                android:textColor="@android:color/primary_text_light" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinputCidade"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/Cidade_Paciente_Cad"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etxtCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Cidade"
                android:inputType="text|textCapWords"
                android:maxLength="30"
                android:textColor="@android:color/primary_text_light" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinputTelefone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/Telefone_Paciente_Cad"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etxtTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/TelefoneDDD"
                android:inputType="phone"
                android:maxLength="11"
                android:textColor="@android:color/primary_text_light" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinputSenha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/Senha_Paciente_Cad"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etxtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Senha"
                android:inputType="textPassword"
                android:maxLength="10"
                android:textColor="@android:color/primary_text_light" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/Botao_Cadastrar_Confirma"
            android:text="@string/Botao_Cadastrar_Info"
            android:textColor="@android:color/white"
            android:visibility="visible" />


        <ProgressBar
            android:id="@+id/progressCadastro"
            style="?android:attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:max="100"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:progress="0"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtTelaLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/Ir_Tela_Login"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/Ir_Tela_Login"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>