<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/CardProxConsulta"
        android:padding="8dp"
        app:cardBackgroundColor="@color/cardColor"
        app:cardCornerRadius="32dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtEspecial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/Especialização"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDataHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:paddingBottom="16dp"
                android:text="@string/DataHorarioCard"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/txtMedico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/AtendimentoPorCard"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtNomeMedicoCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NomeMedicoCard"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

            </TableRow>

            <TextView
                android:id="@+id/txtEndereco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:text="@string/Endereço"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/txtEstadoMD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="4dp"
                android:text="@string/Agendado"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAviso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/AvisoCard"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/txtDetalhes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/AperteDetalhesCard"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>