<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginCadastro.LoginActivity"
    android:background="@drawable/fundo_inicial">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fundo_inicial"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/logo_name"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/CPF_Paciente_Login"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etxtCPF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="auto"
                android:hint="@string/CPF"
                android:inputType="numberSigned"
                android:maxLength="11"
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinputSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Senha_Paciente_Login"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etxtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="auto"
                android:hint="@string/Senha"
                android:inputType="textPassword"
                android:maxLength="10"
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/Botao_Entrar_Login"
            android:padding="12dp"
            android:text="@string/Botao_Entrar"
            android:textColor="@android:color/white"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/progressLogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:max="100"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:progress="0"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtTelaCadastro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/Ir_Tela_Cad"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/Ir_Tela_Cad"
            android:textColor="#000000"
            android:textSize="16sp"
            android:visibility="visible" />

    </LinearLayout>
</ScrollView>