<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:cardBackgroundColor="@color/cardColor"
        app:cardCornerRadius="32dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/txtlabelNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:paddingBottom="8dp"
                android:text="@string/Nome"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNomeMedicoCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="NOME_MEDICO_AQUI"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <View style="@style/Divisor"></View>

            <TextView
                android:id="@+id/txtEstadoMD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/Estado"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="ESTADO_AQUI"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <View style="@style/Divisor"></View>

            <TextView
                android:id="@+id/txtlabelCidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/Cidade"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="CIDADE_AQUI"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <View style="@style/Divisor"></View>

            <TextView
                android:id="@+id/txtlabelEndereco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/Endereço"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEndereco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="ENDERECO_AQUI"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <View style="@style/Divisor"></View>

            <TextView
                android:id="@+id/txtlabelCEP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/CEP"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCEP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="CEP_AQUI"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <View style="@style/Divisor"></View>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>